--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root">
@@ -49,5 +50,6 @@
             Cargando Sistema...
         </div>
     </div>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
